--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,11 +1,11 @@
 <!doctype html>
 <html lang="en">
 	<head>
+		<title>EliteShopOnline - Tu tienda de confianza</title>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width" />
-		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+		<link rel="icon" type="image/svg+xml" href="/EliteShop.webp" />
 		<meta name="generator" content={Astro.generator} />
-		<title>Astro Basics</title>
 	</head>
 	<body>
 		<slot />
@@ -13,10 +13,54 @@
 </html>
 
 <style>
+	@import "tailwindcss";
 	html,
 	body {
+		
+		background-color: #F8CFC7;
 		margin: 0;
+		padding: 0;
 		width: 100%;
 		height: 100%;
+		overflow-x: hidden;
+	}
+
+	@theme {
+		--font-aclonica: "Aclonica", sans-serif;
+		--font-aboreto: "Aboreto", sans-serif;
+		--font-footer: "Agdasima", sans-serif;
+		--font-ecommerce: "EliteShop", sans-serif;
+		--font-info: "Afacad-Bold", sans-serif;
+		--font-signature: "Easy-Rider", cursive;
+	}
+
+	@font-face {
+		font-family: "Aclonica";
+		src: url("/fonts/Aclonica-Regular.ttf") format("truetype");
+	}
+	
+	@font-face {
+		font-family: "Agdasima";
+		src: url(/fonts/Agdasima-Regular.ttf) format("truetype");
+	}
+
+	@font-face {
+		font-family: "EliteShop";
+		src: url("/fonts/EliteShop.ttf") format("truetype");
+	}
+
+	@font-face {
+		font-family: "Afacad-Bold";
+		src: url("/fonts/Afacad-Bold.ttf") format("truetype");
+	}
+
+	@font-face {
+		font-family: "Easy-Rider";
+		src: url("/fonts/Easy-Rider.ttf") format("truetype");
+	}
+
+	@font-face {
+		font-family: "Aboreto";
+		src: url("/fonts/Aboreto-Regular.ttf") format("truetype");
 	}
 </style>
