Actualizar importaciones y estructura del archivo index.astro para incluir Header y Footer

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,11 +1,15 @@
 ---
-import Welcome from '../components/Welcome.astro';
+import Welcome from '../sections/Welcome.astro';
 import Layout from '../layouts/Layout.astro';
+import Header from '../sections/Header.astro';
+import Footer from '../sections/Footer.astro';
 
 // Welcome to Astro! Wondering what to do next? Check out the Astro documentation at https://docs.astro.build
 // Don't want to use any of this? Delete everything in this file, the `assets`, `components`, and `layouts` directories, and start fresh.
 ---
 
 <Layout>
+	<Header />
 	<Welcome />
+	<Footer />
 </Layout>
