Actualizar correo electrónico de contacto en el pie de página

--- a/src/sections/Footer.astro
+++ b/src/sections/Footer.astro
@@ -27,7 +27,7 @@ const socialIcons = {
                     </div>
                     <p class="text-sm mb-4">TU TIENDA DE CONFIANZA #1 DE COLOMBIA</p>
                     <p class="text-sm mb-1"><span class="font-bold">NÚMERO:</span> +57 3229286047</p>
-                    <p class="text-sm -mt-1"><span class="font-bold">CORREO:</span> ELITESHOPONLINE@GMAIL.COM</p>
+                    <p class="text-sm -mt-1"><span class="font-bold">CORREO:</span> ELITESHOPONLINESTORE@GMAIL.COM</p>
                 </div>
 
                 <!-- COLUMN 2: TE PUEDE INTERESAR -->
